manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: profile-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer   # For AWS/GCP/Azure; use NodePort if running locally
